# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-11-08  Michael Jahn
	* status bar shows count of movies after applying a filter

2007-10-15  Michael Jahn
	* Kino.de plugin updated
	* Fetch from Amazon function fixed

2007-09-20 Vasco Nunes
	* Italian language file updated

2007-09-06 Vasco Nunes
	* Berlios task [#003126] complete. Griffith's dir should point to 'Application Data' on windows systems.

2007-09-06  Michael Jahn
	* save window state, position and size on windows systems
	* save selected quick filter criteria
	* fixed backup if path or filename contains special characters (like german umlauts)
	* use deflate for backup if available
	* added auto-test feature for movie plugins (only used by developers; execute
	  test_movieplugins.py directly)
	* FilmeVonAZ and OFDb plugin updated
	* fixed saving media and vcodec defaults in preferences dialog

2007-09-03  Vasco Nunes
	* Some documentations updates

---- 0.9.5 ---

2007-09-02  Piotr Ożarowski
	* Translation files synchronized with Rosetta
	  + new: Catalan, Norwegian Bokmal
	  + uptaded: Brazilian Portuguese, Cech, Dutch, French, German, Italian, Portuguese, Russian
	* Polish translation updated
	* Print cover function fixed (reportlab doesn't like unicode)

2007-09-02  Michael Jahn
	* added support for media type, collection and volume in HTML export plugin
	* added "auto-fixing" of config file values for defaults section

2007-09-01  Piotr Ożarowski
	* Respect medium and video codec's default value in add window (closes: #11864)
	* griffith.glade file converted to glade3 format

2007-09-01  Michael Jahn
	* Kino.de plugin updated
	* Fix encoding of --home argument

2007-09-01  Vasco Nunes
	* Several changes on loan e-mail reminder system:
		+ Loan E-mail reminder timeout implemented
		+ Support for TLS smtp auth handshaking
		+ Added smtp server port usage
		+ Added gmail smtp server support
	* 7arte movie plugin updated